Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn."
+    "from sklearn.datasets import make_blobs"
    ]
   },
   {
