Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -48,7 +48,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.datasets import make_blobs"
+    "from sklearn.datasets import make_blobs\n",
+    "impr"
    ]
   },
   {
