Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -49,7 +49,8 @@
    "outputs": [],
    "source": [
     "from sklearn.datasets import make_blobs\n",
-    "impr"
+    "import pandas as np\n",
+    "imprt nu"
    ]
   },
   {
