Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -51,7 +51,7 @@
     "from sklearn.datasets import make_blobs\n",
     "import pandas as np\n",
     "import numpy as np\n",
-    "import matpl"
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
