--- a/index.ipynb
+++ b/index.ipynb
@@ -51,7 +51,8 @@
     "from sklearn.datasets import make_blobs\n",
     "import pandas as np\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt\n",
+    "np.ra"
    ]
   },
   {
