--- a/index.ipynb
+++ b/index.ipynb
@@ -44,15 +44,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.datasets import make_blobs\n",
     "import pandas as np\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "np.ra"
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random"
    ]
   },
   {
