--- a/index.ipynb
+++ b/index.ipynb
@@ -56,11 +56,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random"
+    "np.random.seed(1)"
    ]
   },
   {
