Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -84,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "make_blobs(n)"
+    "make_blobs(n_features=2, n_samples=400, centers=)"
    ]
   },
   {
