Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -113,7 +113,7 @@
     }
    ],
    "source": [
-    "make_blobs(n_features=2, n_samples=400, centers=6, cluster_std=.8)[1]"
+    "make_blobs(n_features=2, n_samples=400, centers=6, cluster_std=.8)"
    ]
   },
   {
