--- a/index.ipynb
+++ b/index.ipynb
@@ -80,49 +80,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2, 1, 5, 2, 2, 5, 5, 3, 2, 4, 4, 1, 3, 5, 3, 3, 1, 4, 5, 3, 1, 4,\n",
-       "       5, 5, 2, 4, 1, 3, 0, 0, 4, 3, 4, 2, 4, 4, 2, 4, 1, 0, 5, 0, 0, 0,\n",
-       "       3, 1, 3, 0, 5, 4, 0, 3, 5, 5, 5, 2, 4, 2, 0, 4, 1, 1, 5, 0, 0, 1,\n",
-       "       0, 3, 0, 2, 1, 0, 3, 3, 4, 1, 2, 1, 4, 2, 5, 0, 2, 2, 4, 1, 2, 2,\n",
-       "       2, 0, 1, 0, 1, 5, 3, 0, 1, 0, 0, 1, 0, 4, 3, 0, 5, 2, 5, 1, 3, 2,\n",
-       "       3, 1, 2, 5, 4, 1, 1, 3, 3, 2, 3, 0, 1, 5, 4, 1, 0, 4, 4, 4, 5, 5,\n",
-       "       0, 3, 5, 0, 2, 5, 5, 1, 2, 0, 5, 2, 2, 4, 3, 3, 3, 3, 5, 1, 2, 2,\n",
-       "       0, 0, 2, 3, 4, 5, 3, 0, 1, 2, 0, 2, 0, 0, 4, 1, 4, 4, 0, 5, 2, 1,\n",
-       "       4, 3, 4, 4, 2, 3, 1, 5, 0, 1, 1, 0, 1, 2, 1, 0, 3, 3, 0, 3, 2, 4,\n",
-       "       3, 0, 2, 5, 1, 2, 1, 3, 5, 5, 1, 5, 0, 2, 3, 5, 3, 3, 1, 4, 5, 4,\n",
-       "       0, 4, 0, 4, 4, 0, 5, 4, 4, 5, 3, 4, 2, 5, 3, 3, 0, 5, 4, 3, 4, 3,\n",
-       "       1, 3, 5, 5, 4, 4, 2, 2, 5, 2, 1, 3, 2, 3, 1, 2, 3, 4, 4, 0, 0, 4,\n",
-       "       3, 2, 4, 5, 4, 5, 0, 2, 1, 3, 5, 1, 1, 1, 1, 3, 4, 0, 3, 1, 3, 0,\n",
-       "       1, 4, 1, 4, 2, 0, 2, 5, 5, 4, 5, 5, 1, 3, 0, 5, 0, 3, 3, 0, 2, 3,\n",
-       "       0, 0, 1, 0, 2, 1, 3, 1, 1, 4, 2, 5, 2, 0, 0, 0, 5, 3, 1, 3, 2, 5,\n",
-       "       4, 5, 2, 4, 3, 0, 4, 4, 1, 1, 0, 2, 5, 4, 5, 0, 3, 2, 4, 5, 1, 5,\n",
-       "       4, 2, 0, 4, 4, 2, 5, 5, 5, 1, 1, 2, 4, 5, 4, 3, 3, 2, 1, 1, 3, 1,\n",
-       "       2, 3, 4, 5, 1, 0, 2, 2, 5, 5, 1, 3, 3, 2, 5, 1, 0, 3, 2, 2, 0, 0,\n",
-       "       2, 1, 4, 2])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "make_blobs(n_features=2, n_samples=400, centers=6, cluster_std=.8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, y = None"
+    "X, y = make_blobs(n_features=2, n_samples=400, centers=6, cluster_std=.8)"
    ]
   },
   {
