Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -96,71 +96,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([4, 4, 4, 4, 1, 5, 2, 2, 0, 4, 2, 0, 0, 5, 2, 0, 4, 2, 0, 4, 4, 1,\n",
-       "       5, 2, 5, 3, 1, 0, 1, 0, 0, 0, 0, 5, 2, 3, 2, 5, 3, 5, 4, 0, 3, 2,\n",
-       "       3, 2, 2, 3, 1, 2, 5, 5, 5, 2, 0, 0, 4, 2, 5, 3, 1, 4, 4, 0, 1, 4,\n",
-       "       0, 3, 2, 5, 3, 4, 2, 1, 1, 3, 3, 3, 1, 4, 3, 2, 5, 4, 5, 4, 5, 4,\n",
-       "       3, 1, 1, 5, 1, 5, 4, 5, 5, 4, 2, 1, 3, 0, 3, 0, 1, 5, 2, 4, 0, 1,\n",
-       "       4, 5, 5, 5, 0, 5, 2, 3, 3, 5, 4, 4, 0, 3, 4, 1, 3, 5, 0, 3, 2, 2,\n",
-       "       2, 4, 0, 1, 0, 0, 4, 5, 3, 2, 4, 0, 0, 3, 0, 0, 2, 0, 1, 5, 5, 1,\n",
-       "       2, 1, 0, 2, 1, 5, 1, 0, 1, 1, 1, 2, 1, 2, 2, 0, 3, 4, 5, 1, 4, 0,\n",
-       "       1, 1, 0, 1, 1, 5, 4, 3, 3, 1, 5, 4, 5, 0, 4, 1, 4, 5, 1, 2, 2, 5,\n",
-       "       2, 1, 4, 0, 0, 3, 1, 3, 2, 5, 3, 4, 0, 5, 2, 5, 3, 5, 1, 5, 4, 5,\n",
-       "       1, 5, 4, 4, 3, 5, 3, 5, 1, 3, 2, 3, 5, 0, 1, 0, 5, 5, 4, 1, 3, 4,\n",
-       "       2, 2, 2, 0, 1, 1, 1, 3, 4, 2, 0, 5, 2, 5, 0, 3, 2, 4, 2, 1, 2, 0,\n",
-       "       4, 1, 0, 1, 3, 2, 2, 5, 3, 0, 3, 2, 2, 2, 1, 4, 1, 5, 1, 1, 3, 3,\n",
-       "       3, 1, 3, 4, 0, 4, 4, 2, 1, 3, 0, 1, 3, 2, 1, 3, 2, 2, 2, 3, 4, 1,\n",
-       "       3, 1, 1, 2, 5, 2, 1, 3, 0, 2, 0, 3, 3, 0, 5, 2, 0, 0, 0, 5, 2, 3,\n",
-       "       3, 3, 1, 2, 5, 4, 1, 2, 3, 4, 4, 4, 2, 4, 3, 4, 0, 3, 2, 4, 2, 1,\n",
-       "       4, 2, 0, 3, 0, 5, 0, 1, 0, 4, 4, 0, 3, 4, 5, 0, 5, 3, 0, 3, 5, 0,\n",
-       "       5, 5, 3, 4, 2, 5, 1, 0, 0, 4, 5, 4, 1, 0, 5, 2, 0, 3, 3, 1, 5, 4,\n",
-       "       4, 3, 4, 3])"
+       "<matplotlib.collections.PathCollection at 0x7f2bb5b55668>"
       ]
      },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The nice thing about creating a synthetic dataset with `make_blobs` is that it can assign ground-truth clusters, which is why each of the clusters in the visualization above are colored differently. Because of this, we have a way to check the performance of our clustering results against the ground truth of the synthetic dataset. Note that this isn't something that we can do with real-world problems (because if we had labels, we'd likely use supervised learning instead!). However, when learning how to work with clustering algorithms, this provides a solid way for us to learn a bit more about how the algorithm works. \n",
-    "\n",
-    "## Using K-means\n",
-    "\n",
-    "Let's go ahead and create a `KMeans` object and fit it to our data. Then, we can explore the results provided by the algorithm to see how well it performs. \n",
-    "\n",
-    "In the cell below:\n",
-    "\n",
-    "* Create a `KMeans` object, and set the `n_clusters` parameter to `6`.\n",
-    "* `fit()` the KMeans object to the data stored in `X`.\n",
-    "* Use the KMeans object to predict which clusters each data point belongs to by using the `Predict` method on the data stored in `X`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f2bb5bcada0>"
-      ]
-     },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -179,6 +126,23 @@
    ],
    "source": [
     "plt.scatter(X[:, 0], X[:, 1], c=y, s=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The nice thing about creating a synthetic dataset with `make_blobs` is that it can assign ground-truth clusters, which is why each of the clusters in the visualization above are colored differently. Because of this, we have a way to check the performance of our clustering results against the ground truth of the synthetic dataset. Note that this isn't something that we can do with real-world problems (because if we had labels, we'd likely use supervised learning instead!). However, when learning how to work with clustering algorithms, this provides a solid way for us to learn a bit more about how the algorithm works. \n",
+    "\n",
+    "## Using K-means\n",
+    "\n",
+    "Let's go ahead and create a `KMeans` object and fit it to our data. Then, we can explore the results provided by the algorithm to see how well it performs. \n",
+    "\n",
+    "In the cell below:\n",
+    "\n",
+    "* Create a `KMeans` object, and set the `n_clusters` parameter to `6`.\n",
+    "* `fit()` the KMeans object to the data stored in `X`.\n",
+    "* Use the KMeans object to predict which clusters each data point belongs to by using the `Predict` method on the data stored in `X`."
    ]
   },
   {
