--- a/index.ipynb
+++ b/index.ipynb
@@ -147,11 +147,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.cluster import "
+    "from sklearn.cluster import KMeans"
    ]
   },
   {
@@ -160,7 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k_means = None\n",
+    "k_means = KMeans(n)\n",
     "\n",
     "predicted_clusters = None"
    ]
