--- a/index.ipynb
+++ b/index.ipynb
@@ -160,7 +160,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k_means = KMeans(n)\n",
+    "k_means = KMeans(n_clusters=6)\n",
+    "k_means.fit()\n",
     "\n",
     "predicted_clusters = None"
    ]
