--- a/index.ipynb
+++ b/index.ipynb
@@ -156,14 +156,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "k_means = KMeans(n_clusters=6)\n",
     "k_means.fit(X)\n",
     "\n",
-    "predicted_clusters = k"
+    "predicted_clusters = k_means.predict()"
    ]
   },
   {
