--- a/index.ipynb
+++ b/index.ipynb
@@ -156,44 +156,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([5, 0, 5, 3, 0, 0, 4, 0, 4, 1, 4, 4, 3, 1, 2, 5, 5, 3, 4, 2, 5, 4,\n",
-       "       0, 2, 1, 4, 4, 3, 5, 4, 5, 0, 0, 2, 1, 0, 0, 3, 0, 5, 5, 0, 0, 1,\n",
-       "       5, 4, 1, 3, 2, 2, 3, 2, 4, 5, 5, 1, 3, 4, 3, 4, 5, 2, 5, 1, 1, 4,\n",
-       "       5, 5, 0, 5, 5, 4, 1, 3, 2, 5, 1, 0, 3, 1, 1, 0, 1, 3, 3, 0, 3, 3,\n",
-       "       2, 3, 0, 4, 3, 4, 3, 4, 5, 3, 5, 1, 2, 5, 2, 5, 2, 0, 0, 3, 4, 0,\n",
-       "       1, 4, 1, 1, 4, 2, 5, 2, 0, 4, 4, 5, 5, 0, 2, 5, 5, 1, 4, 4, 0, 2,\n",
-       "       2, 3, 4, 3, 1, 1, 1, 1, 0, 3, 0, 4, 2, 1, 2, 4, 1, 1, 1, 4, 5, 1,\n",
-       "       0, 3, 2, 5, 1, 2, 3, 2, 5, 0, 4, 4, 1, 4, 1, 3, 1, 2, 3, 3, 4, 1,\n",
-       "       0, 0, 1, 2, 0, 3, 5, 3, 4, 0, 0, 0, 1, 2, 5, 1, 4, 4, 1, 5, 1, 3,\n",
-       "       2, 2, 1, 2, 2, 2, 3, 5, 4, 4, 2, 4, 5, 5, 0, 2, 5, 3, 5, 3, 4, 1,\n",
-       "       4, 5, 5, 5, 2, 0, 4, 3, 0, 0, 0, 0, 2, 5, 0, 4, 4, 1, 5, 4, 3, 0,\n",
-       "       4, 0, 0, 0, 5, 2, 0, 2, 2, 4, 1, 5, 4, 1, 5, 1, 4, 5, 0, 4, 1, 1,\n",
-       "       1, 3, 0, 0, 0, 0, 5, 1, 4, 1, 0, 2, 4, 3, 1, 5, 2, 5, 3, 2, 3, 4,\n",
-       "       3, 1, 2, 0, 2, 2, 1, 5, 0, 0, 4, 2, 2, 2, 5, 3, 3, 2, 4, 1, 4, 2,\n",
-       "       2, 3, 4, 2, 2, 4, 4, 1, 1, 4, 0, 4, 4, 2, 1, 5, 2, 3, 5, 5, 4, 4,\n",
-       "       2, 1, 2, 4, 5, 2, 1, 1, 2, 0, 5, 5, 3, 3, 1, 0, 3, 3, 3, 3, 1, 1,\n",
-       "       4, 3, 3, 3, 0, 2, 3, 3, 0, 3, 3, 5, 1, 0, 0, 0, 5, 4, 2, 0, 2, 0,\n",
-       "       2, 1, 3, 5, 5, 3, 5, 3, 2, 4, 3, 3, 3, 2, 5, 1, 2, 0, 3, 2, 1, 5,\n",
-       "       2, 1, 3, 5], dtype=int32)"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "k_means = KMeans(n_clusters=6)\n",
     "k_means.fit(X)\n",
     "\n",
-    "predicted_clusters = k_means.predict(X)\n",
-    "predicted_clusters"
+    "predicted_clusters = k_means.predict(X)"
    ]
   },
   {
@@ -208,6 +178,13 @@
     "* Get the cluster centers from the object's `.cluster_centers_` attribute. \n",
     "* Create another scatter plot, but this time, for the first two arguments, pass in `centers[:, 0]` and `centers[:, 1]`. Also set `c='black'` and `s=70`."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
