Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -185,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.sc\n",
+    "plt.scatter(X[:,0])\n",
     "centers = None\n"
    ]
   },
