--- a/index.ipynb
+++ b/index.ipynb
@@ -185,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter(X[:,0], X[:,1], c=)\n",
+    "plt.scatter(X[:,0], X[:,1], c=predicted_clusters)\n",
     "centers = None\n"
    ]
   },
