--- a/index.ipynb
+++ b/index.ipynb
@@ -186,7 +186,7 @@
    "outputs": [],
    "source": [
     "plt.scatter(X[:,0], X[:,1], c=predicted_clusters)\n",
-    "centers = None\n"
+    "centers = k_means.cluster_centers_\n"
    ]
   },
   {
