--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -187,7 +187,7 @@
    "source": [
     "plt.scatter(X[:,0], X[:,1], c=predicted_clusters)\n",
     "centers = k_means.cluster_centers_\n",
-    "plt.scatter(centers[:,0], centers)"
+    "plt.scatter(centers)"
    ]
   },
   {
