--- a/index.ipynb
+++ b/index.ipynb
@@ -267,7 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_2, y_2 = ma"
+    "X_2, y_2 = make_blobs(n_features=2, n_samples=4)"
    ]
   },
   {
