Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -267,7 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_2, y_2 = make_blobs(n_features=2, n_samples=400, centers)"
+    "X_2, y_2 = make_blobs(n_features=2, n_samples=400, centers=np.random.randint(3,8))"
    ]
   },
   {
