--- a/index.ipynb
+++ b/index.ipynb
@@ -263,11 +263,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_2, y_2 = make_blobs(n_features=2, n_samples=400, centers=np.random.randint(3,8))"
+    "X_2, y_2 = make_blobs(n_features=2, n_samples=400, centers=np.random.randint(3,8), cluster_std=0.8)"
    ]
   },
   {
