Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -287,12 +287,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "k_means_3 = KMeans(n_clusters=3).fit(X_2)\n",
-    "k_means_4 = KMeans(n_clusters=).fit(X_2)\n",
+    "k_means_4 = KMeans(n_clusters=4).fit(X_2)\n",
     "k_means_5 = KMeans(n_clusters=5).fit(X_2)\n",
     "k_means_6 = KMeans(n_clusters=6).fit(X_2)\n",
     "k_means_7 = KMeans(n_clusters=7).fit(X_2)\n",
@@ -312,7 +312,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import calinski_harabaz_score, "
+   ]
   },
   {
    "cell_type": "markdown",
