--- a/index.ipynb
+++ b/index.ipynb
@@ -309,11 +309,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import calinski_harabaz_score, "
+    "from sklearn.metrics import calinski_harabaz_score"
    ]
   },
   {
