Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
     "k_means_6 = KMeans(n_clusters=6).fit(X_2)\n",
     "k_means_7 = KMeans(n_clusters=7).fit(X_2)\n",
     "\n",
-    "k_list = [k_means_3, k_means_4, k_means_3, k_means_6, k_means_7, k_means_8]"
+    "k_list = [k_means_3, k_means_4, k_means_5, k_means_6, k_means_7]"
    ]
   },
   {
