Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -344,8 +344,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CH_score = None\n",
-    "\n"
+    "CH_score = []\n",
+    "for model in k_list:\n",
+    "    labels = model.labels_"
    ]
   },
   {
