--- a/index.ipynb
+++ b/index.ipynb
@@ -406,7 +406,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.scatter(X_2[])"
+   ]
   },
   {
    "cell_type": "markdown",
